# platform

./: .gitignore  Dockerfile  Dockerfile.malevich  README.md  docker-compose.yml  malevich.yaml  pyproject.toml  test.ipynb
.github/workflows/: build-and-deploy.yml
app/: config.py  main.py
app/api/: api.py  deps.py
app/api/endpoints/: auth.py  embeddings.py  files.py  inference.py  models.py  requests.py  train.py  training_jobs.py
app/core/: events.py  fastsam_prompt.py
app/crud/: base.py  file_metadata.py  ip_metadata.py  model_metadata.py  request_metadata.py  training_job.py
app/schemas/: auth.py  clay.py  common.py  file_metadata.py  ip_metadata.py  model_metadata.py  request_metadata.py  train.py  training_job.py
app/utils/: auth.py  logging.py  misc.py  print.py  requests.py  validation.py  worker.py
automate_outreach/: clay_forkers_info.csv  clay_stargazers_info.csv  combined_data.csv  fetch_github_forkers.py  fetch_github_stargazers.py  merge_csv.py  prithivi_stargazers_info.csv  prithvi_forkers_info.csv  terratorch_forkers_info.csv  terratorch_stargazers_info.csv
clay/: Dockerfile  args.py  clip.py  config.py  factory.py  flows.py  malevich.py  malevich_bindings.py  model.py  train.py  utils.py
clay/malevich/: bindings.py  flows.py  test.py
scripts/: .gitignore  build_embeddings.py  clean.py  embeddings.py  fastsam_test.py  get_chips.py  get_local_chips.py  get_scores.py  merge_pickle.py  pkl_to_csv.py  retrieve_tile.py  search.py  upload_boxes_to_sb.py  upload_index.py  upload_to_mapbox.sh
scripts/outreach/: fetch_github_forkers.py  fetch_github_stargazers.py  merge_csv.py
scripts/vector_geo_utils/: .gitignore  create_partial_indices.py  db.py  scripts.sh  upload_boxes_to_sb.py  upload_chips_to_bucket.py  upload_clip_boxes.py  upload_defense_boxes.py
